k8s/gke/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: workstack
  namespace: workstack
spec:
  parentRefs:
    - name: workstack
  rules:
    - backendRefs:
        - name: frontend
          port: 8080
