k8s/gke/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: workstack
  namespace: workstack
  annotations:
    kubernetes.io/ingress.global-static-ip-name: workstack-dev-ingress-ip
spec:
  ingressClassName: gce
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8080
